--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,132 @@
-name: glacier-fronts
+name: glacier-fronts-test
 channels:
-  - conda-forge
   - pytorch
   - fastai
-  - nodefaults
+  - conda-forge
+  - defaults
 dependencies:
-  - conda-forge::ipykernel=5.2.0
-  - conda-forge::ipywidgets=7.5.1
-  - pytorch::torchvision=0.5.0
-  - fastai::fastai=1.0.60
+  - appnope=0.1.0=py37hc8dfbb8_1001
+  - attrs=19.3.0=py_0
+  - backcall=0.1.0=py_0
+  - beautifulsoup4=4.9.0=py37hc8dfbb8_0
+  - bleach=3.1.4=pyh9f0ad1d_0
+  - bottleneck=1.3.2=py37h10e2902_1
+  - brotlipy=0.7.0=py37h9bfed18_1000
+  - ca-certificates=2020.4.5.1=hecc5488_0
+  - catalogue=1.0.0=py_0
+  - certifi=2020.4.5.1=py37hc8dfbb8_0
+  - cffi=1.14.0=py37h356ff06_0
+  - chardet=3.0.4=py37hc8dfbb8_1006
+  - cryptography=2.8=py37he655712_2
+  - cycler=0.10.0=py_2
+  - cymem=2.0.3=py37h570ac47_1
+  - cython-blis=0.4.1=py37h9bfed18_1
+  - dataclasses=0.7=py37_0
+  - decorator=4.4.2=py_0
+  - defusedxml=0.6.0=py_0
+  - entrypoints=0.3=py37hc8dfbb8_1001
+  - fastai=1.0.60=1
+  - fastprogress=0.2.3=py_0
+  - freetype=2.10.1=h8da9a1a_0
+  - idna=2.9=py_1
+  - importlib-metadata=1.6.0=py37hc8dfbb8_0
+  - importlib_metadata=1.6.0=0
+  - ipykernel=5.2.0=py37h43977f1_1
+  - ipython=7.13.0=py37hc8dfbb8_2
+  - ipython_genutils=0.2.0=py_1
+  - ipywidgets=7.5.1=py_0
+  - jedi=0.17.0=py37hc8dfbb8_0
+  - jinja2=2.11.2=pyh9f0ad1d_0
+  - jpeg=9c=h1de35cc_1001
+  - jsonschema=3.2.0=py37hc8dfbb8_1
+  - jupyter_client=6.1.3=py_0
+  - jupyter_core=4.6.3=py37hc8dfbb8_1
+  - kiwisolver=1.2.0=py37ha1cc60f_0
+  - libblas=3.8.0=16_openblas
+  - libcblas=3.8.0=16_openblas
+  - libcxx=9.0.1=1
+  - libffi=3.2.1=h4a8c4bd_1007
+  - libgfortran=4.0.0=2
+  - liblapack=3.8.0=16_openblas
+  - libopenblas=0.3.9=h3d69b6c_0
+  - libpng=1.6.37=hbbe82c9_1
+  - libsodium=1.0.17=h01d97ff_0
+  - libtiff=4.1.0=h2ae36a8_6
+  - libwebp-base=1.1.0=h0b31af3_3
+  - llvm-openmp=10.0.0=h28b9765_0
+  - lz4-c=1.9.2=h4a8c4bd_0
+  - markupsafe=1.1.1=py37h9bfed18_1
+  - matplotlib=3.2.1=0
+  - matplotlib-base=3.2.1=py37hddda452_0
+  - mistune=0.8.4=py37h9bfed18_1001
+  - mkl=2020.0=166
+  - murmurhash=1.0.0=py37h570ac47_0
+  - nbconvert=5.6.1=py37hc8dfbb8_1
+  - nbformat=5.0.4=py_0
+  - ncurses=6.1=h0a44026_1002
+  - ninja=1.10.0=ha1b3eb9_0
+  - notebook=6.0.3=py37_0
+  - numexpr=2.7.1=py37h94625e5_1
+  - numpy=1.18.1=py37h7687784_1
+  - nvidia-ml-py3=7.352.0=py_0
+  - olefile=0.46=py_0
+  - openssl=1.1.1f=h0b31af3_0
+  - packaging=20.1=py_0
+  - pandas=1.0.3=py37h94625e5_1
+  - pandoc=2.9.2.1=0
+  - pandocfilters=1.4.2=py_1
+  - parso=0.7.0=pyh9f0ad1d_0
+  - pexpect=4.8.0=py37hc8dfbb8_1
+  - pickleshare=0.7.5=py37hc8dfbb8_1001
+  - pillow=7.1.1=py37hfd78ece_0
+  - pip=20.0.2=py_2
+  - plac=0.9.6=py_1
+  - preshed=3.0.2=py37h570ac47_2
+  - prometheus_client=0.7.1=py_0
+  - prompt-toolkit=3.0.5=py_0
+  - ptyprocess=0.6.0=py_1001
+  - pycparser=2.20=py_0
+  - pygments=2.6.1=py_0
+  - pyopenssl=19.1.0=py_1
+  - pyparsing=2.4.7=pyh9f0ad1d_0
+  - pyrsistent=0.16.0=py37h9bfed18_0
+  - pysocks=1.7.1=py37hc8dfbb8_1
+  - python=3.7.6=h90870a6_5_cpython
+  - python-dateutil=2.8.1=py_0
+  - python_abi=3.7=1_cp37m
+  - pytorch=1.4.0=py3.7_0
+  - pytz=2019.3=py_0
+  - pyyaml=5.3.1=py37h9bfed18_0
+  - pyzmq=19.0.0=py37haec44b1_1
+  - readline=8.0=hcfe32e1_0
+  - requests=2.23.0=pyh8c360ce_2
+  - scipy=1.4.1=py37hce1b9e5_3
+  - send2trash=1.5.0=py_0
+  - setuptools=46.1.3=py37hc8dfbb8_0
+  - six=1.14.0=py_1
+  - soupsieve=1.9.4=py37hc8dfbb8_1
+  - spacy=2.2.3=py37ha1b3eb9_0
+  - sqlite=3.30.1=h93121df_0
+  - srsly=1.0.0=py37h4a8c4bd_0
+  - terminado=0.8.3=py37hc8dfbb8_1
+  - testpath=0.4.4=py_0
+  - thinc=7.3.0=py37ha1b3eb9_0
+  - tk=8.6.10=hbbe82c9_0
+  - torchvision=0.5.0=py37_cpu
+  - tornado=6.0.4=py37h9bfed18_1
+  - tqdm=4.45.0=pyh9f0ad1d_0
+  - traitlets=4.3.3=py37hc8dfbb8_1
+  - urllib3=1.25.9=py_0
+  - wasabi=0.6.0=py_0
+  - wcwidth=0.1.9=pyh9f0ad1d_0
+  - webencodings=0.5.1=py_1
+  - wheel=0.34.2=py_1
+  - widgetsnbextension=3.5.1=py37_0
+  - xz=5.2.5=h0b31af3_0
+  - yaml=0.2.3=h0b31af3_0
+  - zeromq=4.3.2=h6de7cb9_2
+  - zipp=3.1.0=py_0
+  - zlib=1.2.11=h0b31af3_1006
+  - zstd=1.4.4=h4b3e974_3
+prefix: /opt/anaconda3/envs/glacier-fronts
+
